src/pymergetic/wasmmod/loader/__exports__.h

/* DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).
 * Source of truth: pm_wasmmod_registry_* after PM_MOD_EXPORT_* / PM_MOD_EXPORT_RS! registration.
 */
#ifndef PYMERGETIC_WASMMOD_LOADER_EXPORT_H
#define PYMERGETIC_WASMMOD_LOADER_EXPORT_H

#include <stddef.h>
#include <stdint.h>

#include "pymergetic/wasmmod/registry/__types__.h"

#ifdef __cplusplus
extern "C" {
#endif

int32_t pm_wasmmod_loader_shared_free(pm_wasmmod_registry_handle_t, pm_addr_t);

int32_t pm_wasmmod_loader_unload(pm_wasmmod_registry_handle_t);

int32_t pm_wasmmod_loader_shared_alloc(pm_wasmmod_registry_handle_t, uint32_t, pm_buf_t *);

int32_t pm_wasmmod_loader_init(void);

pm_wasmmod_registry_handle_t pm_wasmmod_loader_load(const uint8_t *, uint32_t, const uint8_t *, uint32_t);

pm_addr_t pm_wasmmod_loader_native_to_addr(pm_wasmmod_registry_handle_t, uint32_t, void *);

int32_t pm_wasmmod_loader_bake_pkg_version(const uint8_t *, uint32_t, const uint8_t *, uint32_t);

void * pm_wasmmod_loader_addr_to_native(pm_wasmmod_registry_handle_t, pm_addr_t);

#ifdef __cplusplus
}
#endif

#endif /* PYMERGETIC_WASMMOD_LOADER_EXPORT_H */