src/pymergetic/wasmmod/loader/__exports__.rs

//! DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).

#![allow(non_camel_case_types)]

use core::ffi::c_void;

#[repr(C)]
pub struct pm_buf_t {
    _opaque: [u8; 0],
}

unsafe extern "C" {
    pub fn pm_wasmmod_loader_shared_free(a0: pm_wasmmod_registry_handle_t, a1: pm_addr_t) -> i32;
    pub fn pm_wasmmod_loader_unload(a0: pm_wasmmod_registry_handle_t) -> i32;
    pub fn pm_wasmmod_loader_shared_alloc(a0: pm_wasmmod_registry_handle_t, a1: u32, a2: *mut pm_buf_t) -> i32;
    pub fn pm_wasmmod_loader_init() -> i32;
    pub fn pm_wasmmod_loader_load(a0: *const u8, a1: u32, a2: *const u8, a3: u32) -> pm_wasmmod_registry_handle_t;
    pub fn pm_wasmmod_loader_native_to_addr(a0: pm_wasmmod_registry_handle_t, a1: u32, a2: *mut c_void) -> pm_addr_t;
    pub fn pm_wasmmod_loader_bake_pkg_version(a0: *const u8, a1: u32, a2: *const u8, a3: u32) -> i32;
    pub fn pm_wasmmod_loader_addr_to_native(a0: pm_wasmmod_registry_handle_t, a1: pm_addr_t) -> *mut c_void;
}
